--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div style="position: fixed; width: 100%; top: 0; left: 0; background: rgba(255, 255, 255, 0.1); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); z-index: 1000;">
     <div>
-				<h1 style="margin: 5px; background: linear-gradient(to right, red, gold); -webkit-background-clip: text; -webkit-text-fill-color: transparent;" href="#">Dynamic Graph</h1>
+				<h1 style="margin: 5px; background: linear-gradient(to right, lavender, gold); -webkit-background-clip: text; -webkit-text-fill-color: transparent;" href="#">Dynamic Graph</h1>
 			</div>
 		</div>
 <div class="main">
