--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
     <div
         style="position: fixed; width: 100%; top: 0; left: 0; background: rgba(255, 255, 255, 0.1); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); z-index: 1000;">
         <div>
-            <h1 style="margin: 5px; background: linear-gradient(to right, #E6E6FA, #BBEB00 ); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"
+            <h1 style="margin: 5px; background: linear-gradient(to right, #BBEB00, #E6E6FA ); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"
                 href="#">Dynamic Graph</h1>
         </div>
     </div>
